--- a/index.html
+++ b/index.html
@@ -78,15 +78,21 @@
   </div>
 
   <div class="file-card">
-    <a href="./code/java.html" target="_blank" class="file-link">Java Program</a>
-    <a href="https://github.com/Aathi0001/html/blob/main/code/java.html" target="_blank" class="source-link">View Source (GitHub)</a>
-    <a href="https://raw.githubusercontent.com/Aathi0001/html/refs/heads/main/code/java.html" target="_blank" class="source-link">Raw Source</a>
-  </div>
-
-  <div class="file-card">
     <a href="./code/java_notes.html" target="_blank" class="file-link">Java Notes</a>
     <a href="https://github.com/Aathi0001/html/blob/main/code/java_notes.html" target="_blank" class="source-link">View Source (GitHub)</a>
     <a href="https://raw.githubusercontent.com/Aathi0001/html/refs/heads/main/code/java_notes.html" target="_blank" class="source-link">Raw Source</a>
+  </div>
+
+  <div class="file-card">
+    <a href="./code/advjava.html" target="_blank" class="file-link">Advance Java Notes</a>
+    <a href="https://github.com/Aathi0001/html/blob/main/code/advjava.html" target="_blank" class="source-link">View Source (GitHub)</a>
+    <a href="https://raw.githubusercontent.com/Aathi0001/html/refs/heads/main/code/advjava.html" target="_blank" class="source-link">Raw Source</a>
+  </div>
+
+  <div class="file-card">
+    <a href="./code/react.html" target="_blank" class="file-link">ReactJS Notes</a>
+    <a href="https://github.com/Aathi0001/html/blob/main/code/react.html" target="_blank" class="source-link">View Source (GitHub)</a>
+    <a href="https://raw.githubusercontent.com/Aathi0001/html/refs/heads/main/code/react.html" target="_blank" class="source-link">Raw Source</a>
   </div>
 
   <div class="file-card">
@@ -125,6 +131,24 @@
     <a href="./code/position_ag.html" target="_blank" class="file-link">Display, Position, etc. Assignment</a>
     <a href="https://github.com/Aathi0001/html/blob/main/code/position_ag.html" target="_blank" class="source-link">View Source (GitHub)</a>
     <a href="https://raw.githubusercontent.com/Aathi0001/html/refs/heads/main/code/position_ag.html" target="_blank" class="source-link">Raw Source</a>
+  </div>
+
+  <div class="file-card">
+    <a href="./code/java.html" target="_blank" class="file-link">Java Program</a>
+    <a href="https://github.com/Aathi0001/html/blob/main/code/java.html" target="_blank" class="source-link">View Source (GitHub)</a>
+    <a href="https://raw.githubusercontent.com/Aathi0001/html/refs/heads/main/code/java.html" target="_blank" class="source-link">Raw Source</a>
+  </div>
+
+  <div class="file-card">
+    <a href="./code/ReactJSProgram.html" target="_blank" class="file-link">ReactJS Program</a>
+    <a href="https://github.com/Aathi0001/ReactProgram/blob/main/ReactJSProgram.html" target="_blank" class="source-link">View Source (GitHub)</a>
+    <a href="https://raw.githubusercontent.com/Aathi0001/ReactProgram/refs/heads/main/ReactJSProgram.html" target="_blank" class="source-link">Raw Source</a>
+  </div>
+
+  <div class="file-card">
+    <a href="./code/advjavaprogram.html" target="_blank" class="file-link">Adv Java Program</a>
+    <a href="https://github.com/Aathi0001/AdvJava/blob/main/advjavaprogram.html" target="_blank" class="source-link">View Source (GitHub)</a>
+    <a href="https://raw.githubusercontent.com/Aathi0001/AdvJava/refs/heads/main/advjavaprogram.html" target="_blank" class="source-link">Raw Source</a>
   </div>
 
   <div class="file-card">
