--- a/code/react.html
+++ b/code/react.html
@@ -767,7 +767,7 @@ const Home = () =&gt; {
   <p>
     Notes:
     <ul>
-      <li>Use <code>Link</code> instead of `<a>` tags to prevent page reload.</li>
+      <li>Use <code>Link</code> instead of `&lt;a&gt;` tags to prevent page reload.</li>
       <li><code>Outlet</code> is used to render nested child routes.</li>
       <li>Programmatic navigation can be done using <code>useNavigate</code> hook.</li>
     </ul>
