--- a/index.html
+++ b/index.html
@@ -100,7 +100,13 @@
     <a href="https://github.com/Aathi0001/html/blob/main/code/python.html" target="_blank" class="source-link">View Source (GitHub)</a>
     <a href="https://raw.githubusercontent.com/Aathi0001/html/refs/heads/main/code/python.html" target="_blank" class="source-link">Raw Source</a>
   </div>
-
+          
+  <div class="file-card">
+    <a href="./code/SoftwareEngineering.html" target="_blank" class="file-link">Software Engineering</a>
+    <a href="https://github.com/Aathi0001/html/blob/main/code/SoftwareEngineering.html" target="_blank" class="source-link">View Source (GitHub)</a>
+    <a href="https://raw.githubusercontent.com/Aathi0001/html/refs/heads/main/code/SoftwareEngineering.html" target="_blank" class="source-link">Raw Source</a>
+  </div>
+          
   <div class="file-card">
     <a href="./code/html.html" target="_blank" class="file-link">HTML</a>
     <a href="https://github.com/Aathi0001/html/blob/main/code/html.html" target="_blank" class="source-link">View Source (GitHub)</a>
@@ -184,6 +190,7 @@
 
 </body>
 </html>
+
 
 
 
