--- a/index.html
+++ b/index.html
@@ -106,6 +106,18 @@
     <a href="https://github.com/Aathi0001/html/blob/main/code/SoftwareEngineering.html" target="_blank" class="source-link">View Source (GitHub)</a>
     <a href="https://raw.githubusercontent.com/Aathi0001/html/refs/heads/main/code/SoftwareEngineering.html" target="_blank" class="source-link">Raw Source</a>
   </div>
+
+  <div class="file-card">
+    <a href="./code/linux.html" target="_blank" class="file-link">Linux Commands</a>
+    <a href="https://github.com/Aathi0001/html/blob/main/code/linux.html" target="_blank" class="source-link">View Source (GitHub)</a>
+    <a href="https://raw.githubusercontent.com/Aathi0001/html/refs/heads/main/code/linux.html" target="_blank" class="source-link">Raw Source</a>
+  </div>
+
+  <div class="file-card">
+    <a href="./code/vimShortcuts.html" target="_blank" class="file-link">Vim Shortcuts</a>
+    <a href="https://github.com/Aathi0001/html/blob/main/code/vimShortcuts.html" target="_blank" class="source-link">View Source (GitHub)</a>
+    <a href="https://raw.githubusercontent.com/Aathi0001/html/refs/heads/main/code/vimShortcuts.html" target="_blank" class="source-link">Raw Source</a>
+  </div>
           
   <div class="file-card">
     <a href="./code/html.html" target="_blank" class="file-link">HTML</a>
@@ -190,6 +202,7 @@
 
 </body>
 </html>
+
 
 
 
