--- a/code/linux.html
+++ b/code/linux.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Linux: `ls` command — Complete Reference</title>
+  <title>Linux: command</title>
   <style>
     body{font-family:Inter,Segoe UI,Roboto,Arial,sans-serif;margin:24px;background:#0b0b0b;color:#dfffcf}
     header{margin-bottom:18px}
@@ -18,19 +18,19 @@
 </head>
 <body>
   <header>
-    <h1>Linux: <code>ls</code> command — Complete Reference</h1>
-    <p>This page explains the <code>ls</code> command (GNU coreutils) with options, examples, and usage notes so you can copy it into a file and refer to it while learning.</p>
-    <p class="note">Tip: To get the authoritative list on your system run: <code>man ls</code> or <code>ls --help</code>.</p>
+    <h1>Linux command </h1>
+     <p class="note">Tip: To get the authoritative list on your system run: <code>man [option]</code> or <code>[option] --help</code>.</p>
   </header>
 
   <section>
+    <h2>Linux: <code>ls</code> command </h2>
     <h2>Synopsis</h2>
     <pre>ls [OPTION]... [FILE]...</pre>
     <p><strong>Purpose:</strong> list information about the FILEs (the current directory by default).</p>
   </section>
 
   <section>
-    <h2>Commonly used options (practical)</h2>
+    <h2>Commonly used options </h2>
     <table>
      <tr><th>Option</th><th>Meaning / Notes</th></tr>
      <tr><td><code>-a</code>, <code>--all</code></td><td>Do not ignore entries starting with <code>.</code> (show hidden files)</td></tr>
@@ -1413,3 +1413,4 @@ vim file.txt
 
 </body>
 </html>
+
