--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
   </div>
 
   <div class="file-card">
-    <a href="./code/linux.html" target="_blank" class="file-link">Linux Commands</a>
-    <a href="https://github.com/Aathi0001/html/blob/main/code/linux.html" target="_blank" class="source-link">View Source (GitHub)</a>
-    <a href="https://raw.githubusercontent.com/Aathi0001/html/refs/heads/main/code/linux.html" target="_blank" class="source-link">Raw Source</a>
+    <a href="./code/Linuxs.html" target="_blank" class="file-link">Linux Index</a>
+    <a href="https://github.com/Aathi0001/html/blob/main/code/Linuxs.html" target="_blank" class="source-link">View Source (GitHub)</a>
+    <a href="https://raw.githubusercontent.com/Aathi0001/html/refs/heads/main/code/Linuxs.html" target="_blank" class="source-link">Raw Source</a>
   </div>
 
   <div class="file-card">
@@ -176,6 +176,12 @@
   </div>
 
   <div class="file-card">
+    <a href="./code/linux.html" target="_blank" class="file-link">Linux Commands</a>
+    <a href="https://github.com/Aathi0001/html/blob/main/code/linux.html" target="_blank" class="source-link">View Source (GitHub)</a>
+    <a href="https://raw.githubusercontent.com/Aathi0001/html/refs/heads/main/code/linux.html" target="_blank" class="source-link">Raw Source</a>
+  </div>
+
+  <div class="file-card">
     <a href="./code/chess.html" target="_blank" class="file-link">ChessBoard Assignment</a>
     <a href="https://github.com/Aathi0001/html/blob/main/code/chess.html" target="_blank" class="source-link">View Source (GitHub)</a>
     <a href="https://raw.githubusercontent.com/Aathi0001/html/refs/heads/main/code/chess.html" target="_blank" class="source-link">Raw Source</a>
@@ -202,6 +208,7 @@
 
 </body>
 </html>
+
 
 
 
