--- a/index.html
+++ b/index.html
@@ -71,8 +71,21 @@
 </head>
 <body>
      <div class="container">
+
   <div class="file-card">
-    <a href="./code/db.html" target="_blank" class="file-link">DB</a>
+    <a href="./code/db.html" target="_blank" class="file-link">PSQL</a>
+<a href="https://github.com/Aathi0001/html/blob/main/code/PSQL.html" target="_blank" class="source-link">View Source (GitHub)</a>
+    <a href="https://raw.githubusercontent.com/Aathi0001/html/refs/heads/main/code/PSQL.html" target="_blank" class="source-link">Raw Source</a>
+  </div>
+
+<div class="file-card">
+    <a href="./code/db.html" target="_blank" class="file-link">PhP</a>
+    <a href="https://github.com/Aathi0001/html/blob/main/code/php.html" target="_blank" class="source-link">View Source (GitHub)</a>
+    <a href="https://raw.githubusercontent.com/Aathi0001/html/refs/heads/main/code/php.html" target="_blank" class="source-link">Raw Source</a>
+  </div>
+          
+  <div class="file-card">
+    <a href="./code/db.html" target="_blank" class="file-link">DB MySQL</a>
     <a href="https://github.com/Aathi0001/html/blob/main/code/db.html" target="_blank" class="source-link">View Source (GitHub)</a>
     <a href="https://raw.githubusercontent.com/Aathi0001/html/refs/heads/main/code/db.html" target="_blank" class="source-link">Raw Source</a>
   </div>
@@ -175,6 +188,12 @@
     <a href="https://raw.githubusercontent.com/Aathi0001/html/refs/heads/main/code/advjavaprogram.html" target="_blank" class="source-link">Raw Source</a>
   </div>
 
+<div class="file-card">
+    <a href="./code/db.html" target="_blank" class="file-link">RDBMS</a>
+    <a href="https://github.com/Aathi0001/html/blob/main/code/RDBMS.html" target="_blank" class="source-link">View Source (GitHub)</a>
+    <a href="https://raw.githubusercontent.com/Aathi0001/html/refs/heads/main/code/RDBMS.html" target="_blank" class="source-link">Raw Source</a>
+  </div>
+
   <div class="file-card">
     <a href="./code/linux.html" target="_blank" class="file-link">Linux Commands</a>
     <a href="https://github.com/Aathi0001/html/blob/main/code/linux.html" target="_blank" class="source-link">View Source (GitHub)</a>
@@ -208,6 +227,7 @@
 
 </body>
 </html>
+
 
 
 
