Refactor index.html with updated file cards
The HTML structure and styling have been updated, including the addition of file cards for various programming resources.

--- a/index.html
+++ b/index.html
@@ -73,13 +73,13 @@
      <div class="container">
 
   <div class="file-card">
-    <a href="./code/db.html" target="_blank" class="file-link">PSQL</a>
+    <a href="./code/PSQL.html" target="_blank" class="file-link">PSQL</a>
 <a href="https://github.com/Aathi0001/html/blob/main/code/PSQL.html" target="_blank" class="source-link">View Source (GitHub)</a>
     <a href="https://raw.githubusercontent.com/Aathi0001/html/refs/heads/main/code/PSQL.html" target="_blank" class="source-link">Raw Source</a>
   </div>
 
 <div class="file-card">
-    <a href="./code/db.html" target="_blank" class="file-link">PhP</a>
+    <a href="./code/php.html" target="_blank" class="file-link">PhP</a>
     <a href="https://github.com/Aathi0001/html/blob/main/code/php.html" target="_blank" class="source-link">View Source (GitHub)</a>
     <a href="https://raw.githubusercontent.com/Aathi0001/html/refs/heads/main/code/php.html" target="_blank" class="source-link">Raw Source</a>
   </div>
@@ -189,7 +189,7 @@
   </div>
 
 <div class="file-card">
-    <a href="./code/db.html" target="_blank" class="file-link">RDBMS</a>
+    <a href="./code/RDBMS.html" target="_blank" class="file-link">RDBMS</a>
     <a href="https://github.com/Aathi0001/html/blob/main/code/RDBMS.html" target="_blank" class="source-link">View Source (GitHub)</a>
     <a href="https://raw.githubusercontent.com/Aathi0001/html/refs/heads/main/code/RDBMS.html" target="_blank" class="source-link">Raw Source</a>
   </div>
@@ -227,6 +227,7 @@
 
 </body>
 </html>
+
 
 
 
