--- a/index.html
+++ b/index.html
@@ -83,6 +83,12 @@
     <a href="https://github.com/Aathi0001/html/blob/main/code/php.html" target="_blank" class="source-link">View Source (GitHub)</a>
     <a href="https://raw.githubusercontent.com/Aathi0001/html/refs/heads/main/code/php.html" target="_blank" class="source-link">Raw Source</a>
   </div>
+
+<div class="file-card">
+    <a href="./code/perl.html" target="_blank" class="file-link">Perl</a>
+<a href="https://github.com/Aathi0001/html/blob/main/code/perl.html" target="_blank" class="source-link">View Source (GitHub)</a>
+    <a href="https://raw.githubusercontent.com/Aathi0001/html/refs/heads/main/code/perl.html" target="_blank" class="source-link">Raw Source</a>
+  </div>
           
   <div class="file-card">
     <a href="./code/db.html" target="_blank" class="file-link">DB MySQL</a>
@@ -227,6 +233,7 @@
 
 </body>
 </html>
+
 
 
 
