Update print statement from 'Hello' to 'Goodbye'

--- a/code/perl.html
+++ b/code/perl.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>PSQL</title>
+<title>Perl</title>
 <style>
   body {
     font-family: Arial, sans-serif;
@@ -9412,4 +9412,5 @@ int add(int a, int b) {
 </section><br>
 
 </body>
+
 </html>
