--- a/index.html
+++ b/index.html
@@ -137,7 +137,17 @@
     <a href="https://github.com/Aathi0001/html/blob/main/code/vimShortcuts.html" target="_blank" class="source-link">View Source (GitHub)</a>
     <a href="https://raw.githubusercontent.com/Aathi0001/html/refs/heads/main/code/vimShortcuts.html" target="_blank" class="source-link">Raw Source</a>
   </div>
-          
+          <div class="file-card">
+    <a href="./code/algorithm.html" target="_blank" class="file-link">Algorithm</a>
+    <a href="https://github.com/Aathi0001/html/blob/main/code/algorithm.html" target="_blank" class="source-link">View Source (GitHub)</a>
+    <a href="https://raw.githubusercontent.com/Aathi0001/html/refs/heads/main/code/algorithm.html" target="_blank" class="source-link">Raw Source</a>
+  </div>
+
+<div class="file-card">
+    <a href="./code/datastructure.html" target="_blank" class="file-link">Data Structure</a>
+<a href="https://github.com/Aathi0001/html/blob/main/code/datastructure.html" target="_blank" class="source-link">View Source (GitHub)</a>
+    <a href="https://raw.githubusercontent.com/Aathi0001/html/refs/heads/main/code/datastructure.html" target="_blank" class="source-link">Raw Source</a>
+  </div>
   <div class="file-card">
     <a href="./code/html.html" target="_blank" class="file-link">HTML</a>
     <a href="https://github.com/Aathi0001/html/blob/main/code/html.html" target="_blank" class="source-link">View Source (GitHub)</a>
@@ -233,6 +243,7 @@
 
 </body>
 </html>
+
 
 
 
